--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   fpdart: ^1.2.0
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +50,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.7.1
+  riverpod_generator: ^3.0.3
+  riverpod_lint: ^3.0.3
+  custom_lint: ^0.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
